--- a/.github/workflows/increaseMemory.yml
+++ b/.github/workflows/increaseMemory.yml
@@ -24,7 +24,7 @@ jobs:
           DEPLOYMENT=${{ github.event.inputs.deployment }}
           MEMORY=${{ github.event.inputs.memory }}
 
-          FILE="k8s/${DEPLOYMENT}.yaml"
+          FILE="manifests/${DEPLOYMENT}.yaml"
 
           if [ ! -f "$FILE" ]; then
             echo "Deployment file $FILE not found!"
@@ -43,6 +43,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          git add k8s/${{ github.event.inputs.deployment }}.yaml
+          git add manifests/${{ github.event.inputs.deployment }}.yaml
           git commit -m "chore: update memory limit for ${{ github.event.inputs.deployment }} to ${{ github.event.inputs.memory }}" || echo "No changes to commit"
           git push
