--- a/.github/workflows/increaseMemory.yml
+++ b/.github/workflows/increaseMemory.yml
@@ -39,7 +39,7 @@ jobs:
 
           # Use yq to update memory limit of first container
           yq -i '
-            .spec.template.spec.containers[0].resources.limits.memory = "$MEMORY"
+            .spec.template.spec.containers[0].resources.limits.memory = "strenv(MEMORY)"
           ' "$FILE"
 
       - name: Commit changes
